<resources>
    <string name="app_name">控盐行动</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_password">请输入密码</string>
    <string name="login">登&#160;&#160;&#160;&#160;录</string>
    <string name="personal_center">个人中心</string>
    <string name="name">姓&#160;&#160;&#160;&#160;名：</string>
    <string name="phone">手机号：</string>
    <string name="change">修改密码？</string>
    <string name="exit">退&#160;&#160;&#160;&#160;出</string>
    <string name="confirm">确&#160;&#160;&#160;&#160;定</string>
    <string name="survey">高盐筛查</string>
    <string name="question">高盐调查问卷</string>
    <string name="result">高盐筛查测评结果</string>
    <string name="print">打印</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="car_collect_login"></string>
    <string name="step1"><Data><![CDATA[<font color=#EC6A1A>STEP1.</font> 测量血压]]></Data></string>
    <string name="step2"><Data><![CDATA[<font color=#EC6A1A>STEP2.</font> 口服盐咀嚼片]]></Data></string>
    <string name="step3"><Data><![CDATA[<font color=#EC6A1A>STEP3.</font> 填写问卷]]></Data></string>
    <string name="auto_get">自动获取</string>
    <string name="sbp">收缩压(SBP)=</string>
    <string name="dbp">舒张压(DBP)=</string>
    <string name="kfy_hint">*请选择口服盐片的编号</string>
    <string name="kfy_one">1号</string>
    <string name="kfy_two">2号</string>
    <string name="kfy_three">3号</string>
    <string name="kfy_four">4号</string>
    <string name="mmhg">mmHg</string>
    <string name="base_info">基本信息</string>
    <string name="blood_content">血压情况</string>
    <string name="nearest_blood">本次/最近测量的血压值</string>
    <string name="high_blood">是高血压患者</string>
    <string name="food_habit">日常饮食习惯（请选择最接近的选项）</string>
    <string name="selection_not_null">选项不可为空！</string>
    <string name="normal_food">常用食物频率（请选择最接近的选项）</string>
    <string name="kfyjjp">口服盐咀嚼片</string>
    <string name="commit">提    交</string>

    <!--funtion list-->
    <string name="function_all">综合测试</string>
    <string name="function_qrcode">二维码</string>
    <string name="function_barcode">条形码</string>
    <string name="function_text">文字</string>
    <string name="function_tab">表格</string>
    <string name="function_pic">图片</string>
    <string name="function_multi">多线程</string>
    <string name="function_threeline">空打三行</string>

    <!--titles-->
    <string name="setting_title">设置</string>
    <string name="info_title">打印机信息</string>
    <string name="qr_title">二维码打印测试</string>
    <string name="barcode_title">条形码打印测试</string>
    <string name="text_title">文字打印测试</string>
    <string name="bitmap_title">图片打印测试</string>
    <string name="tab_title">表格打印测试</string>
    <string name="all_title">综合测试</string>

    <!--text-->
    <string name="printer_serial_num">打印机序列号</string>
    <string name="printer_model">打印机型号</string>
    <string name="printer_head">打印头型号</string>
    <string name="printer_firmware">打印机固件版本号</string>
    <string name="printer_head_size">打印机头尺寸</string>
    <string name="printer_distance">打印距离</string>
    <string name="printer_version">打印服务版本</string>
    <string name="printer_dev_version">打印服务开发版本</string>
    <string name="enter_work">进入事务打印</string>
    <string name="exit_work">退出事务打印</string>
    <string name="print_baidu_ticket">打印百度小票</string>
    <string name="print_meituan_ticket">打印美团小票</string>
    <string name="print_eleme_ticket">打印饿了么小票</string>
    <string name="print_koubei_ticket">打印口碑小票</string>
    <string name="print_interval_black">打印间断黑块</string>
    <string name="print_black">打印大黑块</string>
    <string name="printing">打印中~~~</string>
    <string name="input_barcode">请输入条形码内容</string>
    <string name="content_barcode">条形码内容</string>
    <string name="encode_barcode">条形码编码</string>
    <string name="no_print">不打印文字</string>
    <string name="barcode_up">条形码上方</string>
    <string name="barcode_down">条形码下方</string>
    <string name="barcode_updown">条形码上下方</string>
    <string name="text_position">文字位置</string>
    <string name="barcode_height">条形码高度</string>
    <string name="barcode_width">条形码宽度</string>
    <string name="content_qrcode">二维码内容</string>
    <string name="input_qrcode">请输入二维码内容</string>
    <string name="array_qrcode">二维码排列方式</string>
    <string name="size_qrcode">二维码块大小</string>
    <string name="error_qrcode">二维码纠错等级</string>
    <string name="upload_info">上传打印信息</string>
    <string name="characterset">字符集</string>
    <string name="size_text">字体大小</string>
    <string name="type_text">文字字体</string>
    <string name="bold_text">加粗</string>
    <string name="underline_text">下划线</string>
    <string name="connect_method">连接方式</string>
    <string name="size_paper">纸张尺寸</string>
    <string name="print_density">打印浓度</string>
    <string name="add_line">新增一行</string>
    <string name="content_form">表格内容</string>
    <string name="weight_form">内容权重</string>
    <string name="align_form">对齐方式</string>
    <string name="align_left">居左</string>
    <string name="align_mid">居中</string>
    <string name="align_right">居右</string>
    <string name="about">关于</string>
    <string name="single">单个</string>
    <string name="twice">双个</string>
    <string name="connect_service">连接服务</string>
    <string name="disconnect_service">断开服务</string>
    <string name="input_order">请输入指令:</string>
    <string name="multithread">多线程并发打印</string>
    <string name="multithread_stop">点击停止</string>
    <string name="pic_pos">图片排列方式</string>
    <string name="pic_hor">横向</string>
    <string name="pic_ver">纵向</string>
    <string name="pic_mode">图片打印方式</string>
    <string name="pic_mode1">光栅位图</string>
    <string name="pic_mode2">8点单密度</string>
    <string name="pic_mode3">8点双密度</string>
    <string name="pic_mode4">24点单密度</string>
    <string name="pic_mode5">24点双密度</string>
    <string name="style_width">倍宽</string>
    <string name="style_height">倍高</string>


    <!--instruction-->
    <string name="toast_1">事务打印请使用Aidl模式!</string>
    <string name="toast_2">服务已断开!</string>
    <string name="toast_3">蓝牙设备不可用</string>
    <string name="toast_4">未检测到蓝牙设备，请打开蓝牙</string>
    <string name="toast_5">未发现InnterPrinter!</string>
    <string name="toast_6">蓝牙连接失败!</string>
    <string name="toast_7">AIDL 暂时只打印单个二维码</string>
    <string name="toast_8">两个二维码尺寸最大为7</string>
    <string name="toast_9">条码类型或内容不正确!</string>

    <!--about content-->
    <string name="about_content">PrinterHelper适用于sunmi系列\nPrinterHelper集成了AIDL和BLUETOOTH两种连接方式，并且提供一系列的打印测试模块，帮助开发者更快的接入sunmi打印功能。\n上传打印信息可以帮助sunmi更好的定位出现的问题。\n官网:http://www.sunmi.com\n开发者文档: http://docs.sunmi.com
    </string>

    <!--function explain-->
    <string name="text_instruction">说明：Sunmi打印字体是等宽字体，除支持常用Epson指令集设置字体结构外，还可以使用AIDL接口调用直接设置字体大小尺寸，测试demo仅使用后者设置字体大小，开发者有意可自己查阅相关Epson指令设置字体变化。\n注意：字符集的设置只影响指令打印不会影响AIDL打印文字，打印单字节字符集需要先设置单字节模式，Sunmi服务默认双字节模式！</string>

    <!--print content-->
    <string name="text_print">欢迎光临(简体中文)\n歡迎光臨(繁体中文)\nWelcome(英文)\n어서 오세요.(韩文)\nいらっしゃいませ(日文)\nWillkommen in der(德文)\nSouhaits de bienvenue(法文)\nยินดีต้อนรับสู่(泰文)\nДобро пожаловать(俄文)\nBenvenuti a(意大利语)\nvítejte v(捷克文)\nBEM - vindo Ao(葡萄牙文)\nمرحبا بكم في(阿拉伯语)\n</string>

    <!--table explain-->
    <string name="table_instruction">说明：蓝牙打印表格只提供例子及打印效果测试，具体方法可参考epson指令集。</string>
    <string name="bind_phone">绑定手机：</string>
    <string name="hosp_name">医院名称：</string>
    <string name="people_name">人员名称：</string>
    <string name="people_job">人员职务：</string>
    <string name="modify_pwd">修改密码</string>

</resources>
