<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#168179"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:src="@mipmap/home_logo"/>


    <com.wftd.kongyan.view.PowerfulEditText
        android:id="@+id/userName"
        android:layout_width="280dp"
        android:layout_height="42dp"
        android:layout_marginTop="76dp"
        android:background="@drawable/shape_login_input"
        android:drawableLeft="@mipmap/user_icon"
        android:drawablePadding="15dp"
        android:hint="@string/input_phone"
        android:inputType="phone"
        android:lines="1"
        android:maxLength="11"
        android:paddingLeft="15dp"
        android:text="18811443962"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:clearDrawable="@drawable/clear_all"
        app:styleColor="#1AD1C3"/>
    <!--18811443962-->

    <com.wftd.kongyan.view.PowerfulEditText
        android:id="@+id/passWord"
        android:layout_width="280dp"
        android:layout_height="42dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/shape_login_input"
        android:drawableLeft="@mipmap/lock_icon"
        android:drawablePadding="15dp"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:lines="1"
        android:maxLength="15"
        android:paddingLeft="15dp"
        android:text="18811443962"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:clearDrawable="@drawable/clear_all"
        app:styleColor="#1AD1C3"/>


    <TextView
        android:id="@+id/login"
        style="@style/bt_login"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="63dp"
        android:text="@string/login"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="65dp"
        android:text="主办：中国医疗保健国际交流促进会高血压分会"
        android:textColor="@color/white"
        android:textSize="10sp"/>
</LinearLayout>